--- a/estilos.css
+++ b/estilos.css
@@ -318,6 +318,7 @@ a{
 
         /*flex*/
         display: flex;
+        flex: 1 1 50%;
     }
         .articulos{
             background: #f7f7f7;
@@ -330,6 +331,7 @@ a{
             .article{
                 /*background: #1f6cb0;*/
                 /*flex: 1 1 40%;*/
+                display: flex;
                 color: #444;
                 font-size: 0.8125rem;
                 letter-spacing: 1px;
